# 04-classes

./: .hlint.yaml  CHANGELOG.md  Classes.hs  IOExercise.hs  MonoidFoldable.hs  cis5520-classes.cabal  stack.yaml
